Fix stuck title cutting into banners

--- a/scss/elements/_sticky.scss
+++ b/scss/elements/_sticky.scss
@@ -5,6 +5,8 @@ sticky {
 		z-index: 1;
 		position: relative;
 		top: -1px;
+		// Prevent top: -1px from cutting into elements above, like banners
+		clip-path: inset(1px 0 0 0);
 
 		padding-top: 1px + 2px; // 1px to offset top, 2px as actual padding
 		padding-bottom: 2px;
